bk_ida/gobmkida/g0/do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1056:1: error: use of undeclared identifier 'worms_2'
worms_2[pos][k] = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1061:1: error: use of undeclared identifier 'worms_2'
worms_2[pos][0] = worm[pos].origin; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1092:6: error: use of undeclared identifier 'worms_2'
if ( worms_2[pos][l] == worms_2[pos2][k] ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1092:25: error: use of undeclared identifier 'worms_2'
if ( worms_2[pos][l] == worms_2[pos2][k] ) 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1107:1: error: use of undeclared identifier 'worms_2'
worms_2[pos][nworms[pos]++] = worms_2[pos2][k]; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1107:31: error: use of undeclared identifier 'worms_2'
worms_2[pos][nworms[pos]++] = worms_2[pos2][k]; 
                              ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1123:5: error: use of undeclared identifier 'worms_2'
w = worms_2[pos][k]; 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1151:23: error: use of undeclared identifier 'worms_2'
( *cw)[4 * pos + k] = worms_2[pos][k]; 
                      ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/do_compute_effective_worm_sizes/src/obj/1/worm.o] Error 1
